# NTU-MA4830-RealtimeSoftwareForMechatronicSystems

./: .gitignore  CA1_report-1.docx  CMakeLists.txt  DAQ_PCInE.c  README.md  Untitled Diagram.drawio  Untitled Diagram2.drawio
CA1/: ca1.c  ca1_revised  calculation.h  enum.h  main.c  print.h  selection.h  struct.h  title.txt
CA1/datatypes/: struct.h
CA1/functions/: calculation.h  print.h  selection.h
ca1/: CMakeLists.txt  main.c
ca1/datatypes/: enum.h  struct.h
ca1/documents/: CA1 Report.docx  MA4830 CA1 Report.docx
ca1/flowcharts/: Main Flow Chart.drawio
ca1/functions/: calculation.h  print.h  selection.h
ca2/: CMakeLists.txt  Main Structure.drawio  Wave Initialisation.drawio  compile.sh  enum.h  helper.c  helper.h  initialization.c  initialization.h  main.c  main.h  struct.h  wave_generator_pcie.c  wave_generator_pcie.h
ca2/assets/: title.txt
ca2/datatypes/: enum.h  struct.h
ca2/flowcharts/: Main Structure.drawio  Wave File ini  Wave Initialisation.drawio  wave generation and sound
ca2/functions/: helper.c  helper.h  initialization.c  initialization.h  input.c  input.h  logging.c  logging.h  pcie.c  pcie.h  pcie_control.c  pcie_control.h  print.c  print.h  sound.c  sound.h  timer.c  timer.h  wave_generator_pcie.c  wave_generator_pcie.h
ca2/ncurses/: ncurses.c
ca2/others/: DAQ_PCInE.c
ca2/temp/: arrow_key.c  initialization.h  timer.c  user_input.c
lectures/Handout_2/: AdvC_fopenFputs.c  AdvC_fopenFwrite.c  AdvC_mainArgs.c  AdvC_malloc.c  AdvC_passArgs.c  AdvC_ptrArray.c  AdvC_ptrStr.c  file.data  test  test1.c
lectures/PCInE/: DAQ_PCInE.c  (+6 more)
(+61 files in other folders)
